<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_button_list1">뷰페이저</string>
    <string name="main_button_list2">레트로핏</string>
    <string name="main_button_list3">리사이클러뷰</string>
    <string name="main_button_list4">브로드캐스트리시버</string>
    <string name="main_button_list5">서비스</string>
    <string name="main_button_list6">코루틴</string>
    <string name="main_button_list7">핸들러</string>
    <string name="main_button_list8">브로드캐스트리시버</string>
    <string name="main_button_list10">브로드캐스트리시버</string>
    <string name="main_button_list13">대거힐트</string>

    <string name="button_music_play">음악 시작</string>
    <string name="button_music_pause">음악 종료</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_movie_play">영화 시작</string>
    <string name="title_activity_dagger">DaggerActivity</string>
</resources>